src/styles/_input-number.sass
@import tailwind-variables
@import "variables"

.ant-form-item
	.ant-input.noti-input, .noti-input-number
		border-radius: 8px
		.ant-input-number-handler-wrap
			border-radius: 8px
		.ant-input-number-handler-up
			border-top-right-radius: 8px
		.ant-input-number-handler-down
			border-bottom-right-radius: 8px

.ant-form-item:not(.ant-form-item-has-error)
	// Normal state
	.ant-input-number.noti-input-number
		&.ant-input-number-focused
			border: 1px solid $borderColor-notino-black
			box-shadow: $field-shadow-focus-default
		&:not(.ant-input-number-disabled):hover
			border: 1px solid $borderColor-notino-grayDark
		.ant-input-number-input
			&::placeholder
				color: $borderColor-notino-gray
		&.ant-input-number-disabled
			.ant-input-number-input
				color: #9CA3AF
	.ant-input-number-affix-wrapper
		&:focus,
		&.ant-input-number-affix-wrapper-focused
			border: 1px solid $borderColor-notino-black
			box-shadow: $field-shadow-focus-default
			.ant-input-number-focused
				border: none !important
		.ant-input-number
			&:hover
				border: none !important
		.ant-input-number-prefix
			color: $textColor-notino-grayDarker !important
		&.ant-input-number-affix-wrapper-disabled
			.ant-input-number-disabled
				background: transparent
			.ant-input-number-prefix
				color: $textColor-notino-gray !important

.ant-form-item
	// Error state
	&.ant-form-item-has-error
		.ant-input-number.noti-input-number
			&.ant-input-number-focused
				border: 1px solid $borderColor-red-600
				box-shadow: $field-shadow-focus-error
		.ant-input-number-affix-wrapper
			&:focus,
			&.ant-input-number-affix-wrapper-focused
				.ant-input-number-focused
					border: none !important
			.ant-input-number,
			.ant-input-number:hover
					border: none !important
			.ant-input-number-prefix
				color: $textColor-notino-grayDarker !important

